--- a/Cabinet/module.html
+++ b/Cabinet/module.html
@@ -3,7 +3,7 @@
 	<div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Cabinet File Manager</h3>
+                <h3 class="panel-title">Cabinet File Manager: Current Directory {{ currentDirectory }}</h3>
             </div>
 
             <div class="panel-body">
@@ -15,7 +15,6 @@
 					<button type="submit" class="btn btn-default" ng-click="getDirectoryContents(userDirectory)">Go</button>
 				</form>
 				<hr/>
-				<h5 class="text-muted">Current Directory {{ currentDirectory }}</h5>
 				<form class="form-inline" role="form">
 					<button type="submit" class="btn btn-default btn-sm" ng-show="currentDirectory == '/'" disabled>Go Back</button>
 					<button type="submit" class="btn btn-default btn-sm" ng-click="goToParentDirctory()" ng-hide="currentDirectory == '/'">Go Back</button>
@@ -28,6 +27,8 @@
 						<thead>
 							<th>File Name</th>
 							<th>Location</th>
+							<th>Permissions</th>
+							<th>Bytes</th>
 							<th>Delete</th>
 							<th>Edit</th>
 						</thead>
@@ -36,6 +37,8 @@
 								<td ng-hide="item.directory">{{ item.name }}</td>
 								<td ng-show="item.directory"><a href="javascript:;" ng-click="getDirectoryContents(item.path)">{{ item.name }}</a></td>
 								<td class="text-muted"><i>{{ item.path }}</i></td>
+								<td class="text-muted"><i>{{ item.permissions }}</i></td>
+								<td class="text-muted"><i>{{ item.size }}</i></td>
 								<td><a href="" data-toggle="modal" data-target="#deleteModal" ng-click="requestDeleteFile(item)">Delete</a></td>
 								<td><a href="" ng-hide="item.directory" ng-click="requestEditFile(item)" data-toggle="modal" data-target="#fileModal">Edit</a></td>
 							</tr>
@@ -118,6 +121,26 @@
 				<div class="modal-footer">
 					<button type="button" ng-click="createFolder()" class="btn btn-success pull-left" data-dismiss="modal">Create</button>
 					<button type="button" class="btn btn-default pull-right" data-dismiss="modal">Cancel</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Create Message Modal -->
+	<div id="messageModal" class="modal fade" role="dialog">
+		<div class="modal-dialog">
+
+			<!-- Modal content-->
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">{{ message.title }}</h4>
+				</div>
+				<div class="modal-body">
+					<p>{{ message.body }}</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default pull-right" data-dismiss="modal">Dismiss</button>
 				</div>
 			</div>
 		</div>
