--- a/Cabinet/module.html
+++ b/Cabinet/module.html
@@ -73,7 +73,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" ng-click="sendEditFile()" class="btn btn-success pull-left" data-dismiss="modal">Save</button>
-					<button type="button" class="btn btn-default pull-right" data-dismiss="modal" ng-click="editFile = {}">Cancle</button>
+					<button type="button" class="btn btn-default pull-right" data-dismiss="modal" ng-click="editFile = {}">Cancel</button>
 				</div>
 			</div>
 		</div>
